--- a/configuration.yml.dist
+++ b/configuration.yml.dist
@@ -72,48 +72,32 @@ accounts_to_blacklist:
 
 # Sentences you need to tweet to invite a friend
 sentence_for_tag:
-  - "J'invite :"
-  - "Merci ! je tag :"
-  - "Je tag :"
-  - "Hop Hop, j'invite :"
-  - "Avec moi :"
-  - "Help me :"
-  - "Pour vous aussi les gars :"
-  - "tentez votre chance !"
-  - "Je tente ma chance ! J'espère que je vais gagner !"
-  - "J'espère que vais gagner !"
-  - "Merci pour le concours ! Essayez aussi :"
-  - "Que la chance soit avec moi ! et vous"
-  - "Merci d'organiser ce concours ! Ça peut vous intéresser"
-  - "On croise les doigts ! vous aussi"
-  - "C'est pour vous ça ! :"
-  - "Celui là on le gagne"
-  - "J'espère que vais gagner ! On participe !"
-  - "Merci d'organiser ce concours !"
-  - "Bonne chance à tous !"
-  - "J'adore les concours et je sais que vous aussi"
-  - "J'ai tellement envie de gagner, essayez vous aussi"
-  - "Je participe et j'invite"
-  - "Bonjour je participe avec plaisir. Merci pour ce concours et bonne journée ! "
-  - "Merci beaucoup j'adore votre compte. Je vous souhaite une belle continuation. J'invite "
-  - "Bonjour je participe avec plaisir à ce super concours et j'invite "
-  - "Superbe ! Je tente ma chance bien volontiers et j'invite "
-  - "Chouette bonjour je participe avec plaisir avec "
-  - "Bonjour je tente ma chance avec "
-  - "Bonjour, Je tente ma chance bien volontiers et j'invite "
-  - "Merci beaucoup pour ce super concours, je tague "
-  - "Bonjour génial ! Je tente ma chance et j'identifie "
-  - "Merci ! J'invite "
-  - "Hello !!! Merci beaucoup je tente ma chance merci et bonne journée ! Je tague "
-  - "Bonjour je participe avec plaisir pour ce beau cadeau et j'invite "
-  - "Bonjour et merci pour ce super concours :) j'invite "
-  - "Bonjour, trop Sympa ce concours. Essayez-vous aussi "
-  - "Je tag mes amis "
-  - "On tente encore et encore "
-  - "Je tente ma chance aux côtés de "
-  - "Ça vous intéressent ?"
-  - "Qu'est ce que vous en pensez ? Allez participez-vous aussi "
-  - "Let's go, je suis sûr qu'on va gagner cette fois :) "
+  - "Génial :)"
+  - "c'est parti !"
+  - "qui ne tente rien n'a rien :p"
+  - "Allez zou"
+  - "Here we go"
+  - "On y croit :o"
+  - "Merci pour le jeu !!"
+  - "Je tente le jeu"
+  - "j'adore les cadeaux :p"
+  - "go go go"
+  - "je kiffe donc je tente"
+  - "Merci à vous, c'est top"
+  - "On y croit !"
+  - "zoouu !"
+  - "je joue ^^"
+  - "Je kiff ce jeu"
+  - "Je tente on sait jamais !"
+  - "j'y crois à mort"
+  - "goooo ! :D"
+  - "Je joue :)"
+  - "allez je tente le concours"
+  - "Que la chance soit avec moi"
+  - "Que la chance me sourit :)"
+  - "Allez là, j'y crois"
+  - "hello, je joue, merci à vous"
+  - "Allez c'est pour moi"
 
 # hashtag we don't want to tweet
 hashtag_to_blacklist:
